--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -4,7 +4,7 @@ metadata:
   name: commonservice-backup
   namespace: velero
 spec:
-  schedule: 45 * * * *
+  schedule: 45 13 * * *
   template:
     ttl: 48h0m0s
     defaultVolumesToRestic: true
