--- a/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/ibm-common-service-operator.clusterserviceversion.yaml
@@ -6,7 +6,8 @@ metadata:
     capabilities: Seamless Upgrades
     containerImage: icr.io/cpopen/common-service-operator:latest
     createdAt: "2020-10-19T21:38:33Z"
-    description: The IBM Cloud Pak foundational services operator is used to deploy IBM foundational services.
+    description: The IBM Cloud Pak foundational services operator is used to deploy
+      IBM foundational services.
     nss.operator.ibm.com/managed-operators: ibm-common-service-operator
     nss.operator.ibm.com/managed-webhooks: ""
     olm.skipRange: ""
@@ -35,29 +36,31 @@ spec:
       kind: CommonService
       name: commonservices.operator.ibm.com
       specDescriptors:
-      - displayName: License
+      - description: License information for this instance. You must accept the license.
+        displayName: License
         path: license
-        description: License information for this instance. You must accept the license.
-      - description: Read and accept the license that is applicable to your installation. For more information, see https://ibm.biz/icpfs39license
+      - description: Read and accept the license that is applicable to your installation.
+          For more information, see https://ibm.biz/icpfs39license
         displayName: Accept
         path: license.accept
         value:
-          - false
+        - false
         x-descriptors:
-          - urn:alm:descriptor:com.tectonic.ui:checkbox
+        - urn:alm:descriptor:com.tectonic.ui:checkbox
       - path: license.license
         x-descriptors:
-          - urn:alm:descriptor:com.tectonic.ui:hidden
+        - urn:alm:descriptor:com.tectonic.ui:hidden
       - path: license.use
         x-descriptors:
-          - urn:alm:descriptor:com.tectonic.ui:hidden
+        - urn:alm:descriptor:com.tectonic.ui:hidden
       - path: license.key
         x-descriptors:
-          - urn:alm:descriptor:com.tectonic.ui:hidden
+        - urn:alm:descriptor:com.tectonic.ui:hidden
       - path: license.use
         x-descriptors:
-          - urn:alm:descriptor:com.tectonic.ui:hidden
-      - description: The size of deployment profile for IBM Cloud Pak foundational services.
+        - urn:alm:descriptor:com.tectonic.ui:hidden
+      - description: The size of deployment profile for IBM Cloud Pak foundational
+          services.
         displayName: Size
         path: size
         x-descriptors:
@@ -75,7 +78,6 @@ spec:
         path: servicesNamespace
         x-descriptors:
         - urn:alm:descriptor:io.kubernetes:Namespace
-      # ----------- Advanced Section -----------
       - displayName: Storage class
         path: storageClass
         x-descriptors:
@@ -83,6 +85,11 @@ spec:
         - urn:alm:descriptor:com.tectonic.ui:advanced
       - displayName: FIPS mode
         path: fipsEnabled
+        x-descriptors:
+        - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+        - urn:alm:descriptor:com.tectonic.ui:advanced
+      - displayName: HugePages Setting
+        path: hugePages.enable
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
         - urn:alm:descriptor:com.tectonic.ui:advanced
@@ -123,7 +130,6 @@ spec:
         - urn:alm:descriptor:com.tectonic.ui:select:Automatic
         - urn:alm:descriptor:com.tectonic.ui:select:Manual
         - urn:alm:descriptor:com.tectonic.ui:advanced
-      # ----------- Hidden Section -----------
       - path: manualManagement
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:hidden
