--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -2026,6 +2026,9 @@ rules:
   - operandbindinfos
   - operandbindinfos/status
   - operandbindinfos/finalizers
+  - operatorconfigs
+  - operatorconfigs/status
+  - operatorconfigs/finalizers
   verbs:
   - create
   - delete
