--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -121,6 +121,7 @@ rules:
   - commonservices/status
   - operandconfigs
   - operandregistries
+  - operatorconfigs
   verbs:
   - create
   - delete
