add a new step to restore singleton subscription
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/velero/backup/backup.yaml
+++ b/velero/backup/backup.yaml
@@ -18,6 +18,7 @@ spec:
       operator: In
       values:
       - catalog
+      - singleton-subscription
       - subscription
       - operand
       - data
