--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -21,8 +21,9 @@ metadata:
         }
       ]
     capabilities: Seamless Upgrades
+    cloudPakThemesVersion: styles460.css
     containerImage: icr.io/cpopen/common-service-operator:latest
-    createdAt: "2024-04-03T14:59:21Z"
+    createdAt: "2024-04-11T02:45:28Z"
     description: The IBM Cloud Pak foundational services operator is used to deploy IBM foundational services.
     nss.operator.ibm.com/managed-operators: ibm-common-service-operator
     nss.operator.ibm.com/managed-webhooks: ""
