align scripts-dev and scripts branches
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/backup/zen/zen5_backup_pvc.yaml
+++ b/velero/backup/zen/zen5_backup_pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: zen5-backup-pvc
   labels:
-    foundationservices.cloudpak.ibm.com: zen5-data
+    foundationservices.cloudpak.ibm.com: data
 spec:
   storageClassName: ibmc-block-retain-gold
   accessModes:
