--- a/velero/restore/common-service-db/cs-db-restore-job.yaml
+++ b/velero/restore/common-service-db/cs-db-restore-job.yaml
@@ -1,8 +1,8 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: zen5-backup-job
-  namespace: zen
+  name: cs-db-restore-job
+  namespace: <cs-db namespace>
 spec:
   template:
     spec:
@@ -10,11 +10,10 @@ spec:
         - command:
           - sh
           - -c
-          - ls
-          - ./zen5/backup_zen5.sh <zenservice namespace>
-          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0 #4.1.0 if using CS 4.1, 4.2.0, etc based on CS version.
+          - /cs-db/br_cs-db.sh restore <cs-db namespace>
+          image: icr.io/cpopen/cpfs/cpfs-utils:4.3.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2
           imagePullPolicy: Always
-          name: zen5-backup-job
+          name: cs-db-restore-job
           resources:
             limits:
               cpu: 500m
@@ -33,23 +32,23 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-          - mountPath: /zen5/zen-backup
-            name: zen5-backup-mount
+          - mountPath: /cs-db/cs-db-backup
+            name: cs-db-backup-mount
           - name: scripts
-            mountPath: "/zen5"
+            mountPath: "/cs-db"
         dnsPolicy: ClusterFirst
         restartPolicy: OnFailure
         schedulerName: default-scheduler
         securityContext:
           runAsNonRoot: true
-        serviceAccount: zen5-backup-sa
-        serviceAccountName: zen5-backup-sa
+        serviceAccount: cs-db-backup-sa
+        serviceAccountName: cs-db-backup-sa
         terminationGracePeriodSeconds: 30
         volumes:
-        - name: zen5-backup-mount
+        - name: cs-db-backup-mount
           persistentVolumeClaim:
-            claimName: zen5-backup-pvc
+            claimName: cs-db-backup-pvc
         - name: scripts
           configMap:
-            name: zen5-br-configmap
+            name: cs-db-br-configmap
             defaultMode: 0777
