--- a/velero/schedule/common-service-db/cs-db-backup-pvc.yaml
+++ b/velero/schedule/common-service-db/cs-db-backup-pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: zen5-backup-pvc
-  namespace: <zenservice namespace>
+  name: cs-db-backup-pvc
+  namespace: <cs-db namespace>
   labels:
-    foundationservices.cloudpak.ibm.com: zen5-data
+    foundationservices.cloudpak.ibm.com: cs-db-data
 spec:
   storageClassName: <storage class>
   accessModes:
