--- a/velero/schedule/keycloak/keycloak-backup-pvc.yaml
+++ b/velero/schedule/keycloak/keycloak-backup-pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: zen5-backup-pvc
-  namespace: <zenservice namespace>
+  name: keycloak-backup-pvc
+  namespace: <keycloak namespace>
   labels:
-    foundationservices.cloudpak.ibm.com: zen5-data
+    foundationservices.cloudpak.ibm.com: keycloak-data
 spec:
   storageClassName: <storage class>
   accessModes:
