--- a/velero/restore/keycloak/keycloak-restore-job.yaml
+++ b/velero/restore/keycloak/keycloak-restore-job.yaml
@@ -11,7 +11,7 @@ spec:
           - sh
           - -c
           - /keycloak/br_keycloak.sh restore <keycloak namespace>
-          image: icr.io/cpopen/cpfs/cpfs-utils:4.3.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2
+          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2 etc based on CS version.
           imagePullPolicy: Always
           name: keycloak-restore-job
           resources:
