--- a/velero/restore/keycloak/keycloak-restore-job.yaml
+++ b/velero/restore/keycloak/keycloak-restore-job.yaml
@@ -1,8 +1,8 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: zen5-backup-job
-  namespace: zen
+  name: keycloak-restore-job
+  namespace: <keycloak namespace>
 spec:
   template:
     spec:
@@ -10,11 +10,10 @@ spec:
         - command:
           - sh
           - -c
-          - ls
-          - ./zen5/backup_zen5.sh <zenservice namespace>
-          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0 #4.1.0 if using CS 4.1, 4.2.0, etc based on CS version.
+          - /keycloak/br_keycloak.sh restore <keycloak namespace>
+          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2 etc based on CS version.
           imagePullPolicy: Always
-          name: zen5-backup-job
+          name: keycloak-restore-job
           resources:
             limits:
               cpu: 500m
@@ -33,23 +32,23 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-          - mountPath: /zen5/zen-backup
-            name: zen5-backup-mount
+          - mountPath: /keycloak/keycloak-backup
+            name: keycloak-backup-mount
           - name: scripts
-            mountPath: "/zen5"
+            mountPath: "/keycloak"
         dnsPolicy: ClusterFirst
         restartPolicy: OnFailure
         schedulerName: default-scheduler
         securityContext:
           runAsNonRoot: true
-        serviceAccount: zen5-backup-sa
-        serviceAccountName: zen5-backup-sa
+        serviceAccount: keycloak-backup-sa
+        serviceAccountName: keycloak-backup-sa
         terminationGracePeriodSeconds: 30
         volumes:
-        - name: zen5-backup-mount
+        - name: keycloak-backup-mount
           persistentVolumeClaim:
-            claimName: zen5-backup-pvc
+            claimName: keycloak-backup-pvc
         - name: scripts
           configMap:
-            name: zen5-br-configmap
+            name: keycloak-br-configmap
             defaultMode: 0777
