--- a/velero/schedule/schedule-common-services.yaml
+++ b/velero/schedule/schedule-common-services.yaml
@@ -38,3 +38,6 @@ spec:
         - crd
         - lsr
         - lsr-data
+        - cs-db-data
+        - keycloak-data
+        - singleton-subscription
