add network policy support on zen ns
Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

--- a/cp3-networkpolicy/egress/operators/bedrock-egress-allow-to-apiserver.yaml
+++ b/cp3-networkpolicy/egress/operators/bedrock-egress-allow-to-apiserver.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: bedrock-egress-allow-k8s-services
-  namespace: "csNamespace"
+  name: egress-allow-to-apiserver
+  namespace: "opNamespace"
   labels:
     component: cpfs3
 spec:
