--- a/cp3-networkpolicy/egress/zen/zen-egress-zen-core-pre-requisite-job.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-zen-core-pre-requisite-job.yaml
@@ -1,14 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: egress-zen-metastoredb-init-job
-  namespace: "csNamespace"
+  name: egress-zen-core-pre-requisite-job
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "metastoredb-init-job"
+      component: "zen-core-pre-requisite-job"
   policyTypes:
   - Egress
   egress:
