--- a/cp3-networkpolicy/egress/zen/zen-egress-usermgmt-ensure-tables-job.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-usermgmt-ensure-tables-job.yaml
@@ -1,14 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: egress-zen-metastoredb
-  namespace: "csNamespace"
+  name: egress-usermgmt-ensure-tables-job
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "zen-metastoredb"
+      component: "usermgmt-ensure-tables-job"
   policyTypes:
   - Egress
   egress:
