--- a/cp3-networkpolicy/egress/zen/zen-egress-zen-metastoredb-init-job.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-zen-metastoredb-init-job.yaml
@@ -1,16 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: access-to-zen-watchdog
-  namespace: "csNamespace"
+  name: egress-zen-metastoredb-init-job
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "zen-watchdog"
+      component: "metastoredb-init-job"
   policyTypes:
-  - Ingress
-  ingress:
-  - from:
-    - podSelector: {} 
+  - Egress
+  egress:
+  - {}
