--- a/cp3-networkpolicy/egress/zen/zen-egress-zen-minio.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-zen-minio.yaml
@@ -1,14 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: egress-nginx
-  namespace: "csNamespace"
+  name: egress-zen-minio
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "ibm-nginx"
+      component: "zen-minio"
   policyTypes:
   - Egress
   egress:
