--- a/cp3-networkpolicy/ingress/zen/zen-access-to-nginx.yaml
+++ b/cp3-networkpolicy/ingress/zen/zen-access-to-nginx.yaml
@@ -1,16 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-iam-config-job
-  namespace: "csNamespace"
+  name: access-to-ibm-nginx
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "iam-config-job"
+      component: "ibm-nginx"
   policyTypes:
   - Ingress
   ingress:
-  - from:
-    - podSelector: {}
+  - {}
