--- a/cp3-networkpolicy/ingress/zen/zen-access-to-usermgmt.yaml
+++ b/cp3-networkpolicy/ingress/zen/zen-access-to-usermgmt.yaml
@@ -1,14 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: access-to-zen-core-api
-  namespace: "csNamespace"
+  name: access-to-usermgmt
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "zen-core-api"
+      component: "usermgmt"
   policyTypes:
   - Ingress
   ingress:
