--- a/cp3-networkpolicy/ingress/zen/zen-access-to-zen-core.yaml
+++ b/cp3-networkpolicy/ingress/zen/zen-access-to-zen-core.yaml
@@ -1,19 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: access-to-usermgmt
-  namespace: "csNamespace"
+  name: access-to-zen-core
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "usermgmt"
+      component: "zen-core"
   policyTypes:
   - Ingress
   ingress:
   - from:
-    - namespaceSelector: 
-        matchLabels:
-          kubernetes.io/metadata.name: "opNamespace"
     - podSelector: {}
