--- a/cp3-networkpolicy/ingress/zen/zen-access-to-zen-minio.yaml
+++ b/cp3-networkpolicy/ingress/zen/zen-access-to-zen-minio.yaml
@@ -1,12 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: access-to-csNamespace-from-opNamespace-namespace
-  namespace: "csNamespace"
+  name: access-to-zen-minio
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
-  podSelector: {}
+  podSelector:
+    matchLabels:
+      component: "zen-minio"
   policyTypes:
   - Ingress
   ingress:
@@ -14,3 +16,4 @@ spec:
     - namespaceSelector:
         matchLabels:
           kubernetes.io/metadata.name: "opNamespace"
+    - podSelector: {}
