--- a/cp3-networkpolicy/ingress/zen/zen-access-to-zen-watchdog.yaml
+++ b/cp3-networkpolicy/ingress/zen/zen-access-to-zen-watchdog.yaml
@@ -1,14 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: access-to-volumes
-  namespace: "csNamespace"
+  name: access-to-zen-watchdog
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      icpdsupport/app: volumes
+      component: "zen-watchdog"
   policyTypes:
   - Ingress
   ingress:
