[Dev Branch] Update network policy for CS 4.6 (#1932)
* Update network policy for CS 4.6

Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

* add network policy support on zen ns

Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

* remove ocp ingress network policy

Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

* update networkpolicy for apiserver

Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

---------

Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

--- a/cp3-networkpolicy/ingress/zen/zen-access-to-zen-minio.yaml
+++ b/cp3-networkpolicy/ingress/zen/zen-access-to-zen-minio.yaml
@@ -1,19 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: access-to-usermgmt
-  namespace: "csNamespace"
+  name: access-to-zen-minio
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "usermgmt"
+      component: "zen-minio"
   policyTypes:
   - Ingress
   ingress:
   - from:
-    - namespaceSelector: 
+    - namespaceSelector:
         matchLabels:
           kubernetes.io/metadata.name: "opNamespace"
     - podSelector: {}
