--- a/cp3-networkpolicy/egress/services/bedrock-egress-common-web-ui.yaml
+++ b/cp3-networkpolicy/egress/services/bedrock-egress-common-web-ui.yaml
@@ -1,16 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: access-to-volumes
-  namespace: "csNamespace"
   labels:
     component: cpfs3
+  name: egress-common-web-ui
+  namespace: "csNamespace"
 spec:
   podSelector:
     matchLabels:
-      icpdsupport/app: volumes
+      k8s-app: common-web-ui
   policyTypes:
-  - Ingress
-  ingress:
-  - from:
-    - podSelector: {} 
+  - Egress
+  egress:
+  - {}
