--- a/cp3-networkpolicy/egress/zen/zen-egress-usermgmt.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-usermgmt.yaml
@@ -1,16 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-iam-config-job
-  namespace: "csNamespace"
+  name: egress-usermgmt
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      component: "iam-config-job"
+      component: "usermgmt"
   policyTypes:
-  - Ingress
-  ingress:
-  - from:
-    - podSelector: {}
+  - Egress 
+  egress:
+  - {}
