--- a/cp3-networkpolicy/egress/license-service/bedrock-egress-ibm-licensing-service-instance.yaml
+++ b/cp3-networkpolicy/egress/license-service/bedrock-egress-ibm-licensing-service-instance.yaml
@@ -12,4 +12,13 @@ spec:
   policyTypes:
   - Egress
   egress:
-  - {}
+    - ports:
+        - protocol: TCP
+          port: 443
+        - protocol: TCP
+          port: 6443
+      to:
+        - podSelector:
+            matchLabels:
+              apiserver: 'true'
+          namespaceSelector: {}
