--- a/cp3-networkpolicy/egress/cert-manager/bedrock-egress-ibm-cert-manager-controller.yaml
+++ b/cp3-networkpolicy/egress/cert-manager/bedrock-egress-ibm-cert-manager-controller.yaml
@@ -1,16 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: egress-ibm-licensing-operator
-  namespace: "licNamespace"
+  name: egress-ibm-cert-manager-controller
+  namespace: "certNamespace"
   labels:
     component: cpfs3
 spec:
-  podSelector:
-    matchLabels:
-      name: "ibm-licensing-operator"
-  policyTypes:
-  - Egress
   egress:
     - ports:
         - protocol: TCP
@@ -22,3 +17,8 @@ spec:
             matchLabels:
               apiserver: 'true'
           namespaceSelector: {}
+  podSelector:
+    matchLabels:
+      app: "ibm-cert-manager-controller"
+  policyTypes:
+  - Egress
