--- a/cp3-networkpolicy/egress/cert-manager/bedrock-egress-ibm-cert-manager-operator.yaml
+++ b/cp3-networkpolicy/egress/cert-manager/bedrock-egress-ibm-cert-manager-operator.yaml
@@ -7,7 +7,16 @@ metadata:
     component: cpfs3
 spec:
   egress:
-  - {}
+    - ports:
+        - protocol: TCP
+          port: 443
+        - protocol: TCP
+          port: 6443
+      to:
+        - podSelector:
+            matchLabels:
+              apiserver: 'true'
+          namespaceSelector: {}
   podSelector:
     matchLabels:
       name: "ibm-cert-manager-operator"
