update test resoruces
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-deployment.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-deployment.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: cpfs-util
-  namespace: cs
+  namespace: cs-op
 spec:
   selector:
     matchLabels:
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       name: cpfs-util
-      namespace: cs
+      namespace: cs-op
       labels:
         foundationservices.cloudpak.ibm.com: cpfs-util-backup
     spec:
@@ -19,7 +19,7 @@ spec:
           - sh
           - -c
           - sleep infinity
-          image: icr.io/cpopen/cpfs/cpfs-utils:4.5.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2
+          image: docker-na-public.artifactory.swg-devops.com/hyc-cloud-private-scratch-docker-local/ibmcom/cpfs-utils-amd64:4.5.1 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2
           imagePullPolicy: IfNotPresent
           name: cpfs-util
           resources:
