--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-br-configmap.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-br-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cpfs-util-br-configmap
-  namespace: cs
+  namespace: cs-op
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 data:
