--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-role.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: cpfs-util-role
-  namespace: cs
+  namespace: cs-op
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 rules:
