--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-rolebinding.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-rolebinding.yaml
@@ -2,15 +2,15 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: cpfs-util-rolebinding
-  namespace: cs
+  namespace: cs-op
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: cpfs-util-role
-  namespace: cs
+  namespace: cs-op
 subjects:
 - kind: ServiceAccount
   name: cpfs-util-sa
-  namespace: cs
+  namespace: cs-op
