--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-role.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-role.yaml
@@ -36,8 +36,8 @@ rules:
       - pods/status
       - jobs
       - secrets
-      - commonservice
-      - packagemanifest
+      - commonservices
+      - packagemanifests
       - configmaps
       - subscriptions
   - verbs:
